force-app/main/default/objects/Id_Number_Search__c/Id_Number_Search__c.object-meta.xml
<CustomObject>
    <label>Id Number Search</label>
    <nameField>
        <displayFormat>ID-{0000}</displayFormat>
        <label>Id Number Search Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Id Number Searches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>