force-app/main/default/objects/Id_Number_Search__c/fields/Date_Of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Birth__c</fullName>
    <formula>RIGHT(LEFT(ID_Number__c, 4), 2)+&apos;/&apos;+RIGHT(LEFT(ID_Number__c, 6), 2)+&apos;/&apos;+
IF(VALUE(LEFT( ID_Number__c , 2)) &lt;= 99, &apos;19&apos; + LEFT( ID_Number__c , 2) , &apos;20&apos; + LEFT( ID_Number__c , 2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Of Birth</label>
    <type>Text</type>
</CustomField>