force-app/main/default/objects/Id_Number_Search__c/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <formula>IF(VALUE(RIGHT(LEFT( ID_Number__c ,10), 4)) &lt; 5000, &apos;FEMALE&apos;,&apos;MALE&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gender</label>
    <type>Text</type>
</CustomField>