force-app/main/default/objects/Id_Number_Search__c/fields/SA_Citizen__c.field-meta.xml
<CustomField>
    <fullName>SA_Citizen__c</fullName>
    <formula>IF(RIGHT(LEFT( ID_Number__c, 11), 1)==&apos;0&apos;, true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SA Citizen</label>
    <type>Checkbox</type>
</CustomField>