force-app/main/default/objects/Id_Number_Search__c/fields/Searches__c.field-meta.xml
<CustomField>
    <fullName>Searches__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Searches</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>