force-app/main/default/objects/Id_Number_Search__c/validationRules/Incorrect_Date_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Incorrect_Date_Range</fullName>
    <active>true</active>
    <errorConditionFormula>OR( VALUE(RIGHT(LEFT(ID_Number__c,4), 2)) &gt; 12 , VALUE(RIGHT(LEFT(ID_Number__c,6), 2)) &gt; 31   )</errorConditionFormula>
    <errorMessage>Please correct id number as month/date range is out of boundaries</errorMessage>
</ValidationRule>