force-app/main/default/objects/Id_Number_Search__c/validationRules/Invalid_Id.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_Id</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISNUMBER( ID_Number__c ))</errorConditionFormula>
    <errorMessage>Id Number invalid, please enter a valid id number</errorMessage>
</ValidationRule>